--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,21 @@
 cmake_minimum_required(VERSION 3.8)
-project(ex2)
+project(reversi)
 
 set(CMAKE_CXX_STANDARD 98)
 
-set(SOURCE_FILES main.cpp Board.cpp Board.h Disc.cpp Disc.h GameLogic.cpp GameLogic.h ReversiGame.cpp ReversiGame.h Player.cpp Player.h StackOfDiscs.cpp StackOfDiscs.h )
-add_executable(ex2 ${SOURCE_FILES})
+set(SOURCE_FILES
+        Board.cpp
+        Board.h
+        Disc.cpp
+        Disc.h
+        GameLogic.cpp
+        GameLogic.h
+        main.cpp
+        Player.cpp
+        Player.h
+        ReversiGame.cpp
+        ReversiGame.h
+        StackOfDiscs.cpp
+        StackOfDiscs.h)
+
+add_executable(reversi ${SOURCE_FILES})
