--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,10 @@ set(SOURCE_FILES
         ReversiGame.cpp
         ReversiGame.h
         StackOfDiscs.cpp
-        StackOfDiscs.h HumanPlayer.cpp HumanPlayer.h)
+        StackOfDiscs.h
+        HumanPlayer.cpp
+        HumanPlayer.h
+        Menu.cpp
+        Menu.h)
 
 add_executable(reversi ${SOURCE_FILES})
