new code arranged: -rearranging the code -player inherenatce - plyerLogic as virtual -replacing parts of turn fun in gameLogic to playerLogic in HumanPlayer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,6 @@ set(SOURCE_FILES
         HumanPlayer.cpp
         HumanPlayer.h
         Menu.cpp
-        Menu.h)
+        Menu.h AiPlayer.cpp AiPlayer.h)
 
 add_executable(reversi ${SOURCE_FILES})
