--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,27 +1,28 @@
 cmake_minimum_required(VERSION 3.8)
 project(reversi)
-
-set(CMAKE_CXX_STANDARD 11)
+add_subdirectory(ReversiTest)
+set(CMAKE_CXX_STANDARD 98)
 
 set(SOURCE_FILES
-        AiPlayer.cpp
-        AiPlayer.h
-        Board.cpp
-        Board.h
-        Disc.cpp
-        Disc.h
-        GameLogic.cpp
-        GameLogic.h
-        HumanPlayer.cpp
-        HumanPlayer.h
-        main.cpp
-        Menu.cpp
-        Menu.h
-        Player.cpp
-        Player.h
-        ReversiGame.cpp
-        ReversiGame.h
-        StackOfDiscs.cpp
-        StackOfDiscs.h Symbol.h)
+        src/AiPlayer.cpp
+        src/AiPlayer.h
+        src/Board.cpp
+        src/Board.h
+        src/Disc.cpp
+        src/Disc.h
+        src/GameLogic.cpp
+        src/GameLogic.h
+        src/HumanPlayer.cpp
+        src/HumanPlayer.h
+        src/main.cpp
+        src/Menu.cpp
+        src/Menu.h
+        src/Player.cpp
+        src/Player.h
+        src/ReversiGame.cpp
+        src/ReversiGame.h
+        src/StackOfDiscs.cpp
+        src/StackOfDiscs.h
+        src/Symbol.h)
 
-add_executable(reversi ${SOURCE_FILES} Symbol.h)
+add_executable(reversi ${SOURCE_FILES})
