--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.8)
 project(reversi)
 add_subdirectory(ReversiTest)
-add_subdirectory(server)
+add_subdirectory(Server)
 add_subdirectory(client)
 set(CMAKE_CXX_STANDARD 98)
 
