--- a/src/Server/CMakeLists.txt
+++ b/src/Server/CMakeLists.txt
@@ -3,5 +3,5 @@ project(server)
 
 set(CMAKE_CXX_STANDARD 98)
 
-set(SOURCE_FILES main.cpp Server.cpp Server.h)
+set(SOURCE_FILES main.cpp Server.cpp Server.h Command.h CommandsManager.cpp CommandsManager.h)
 add_executable(server ${SOURCE_FILES})
