--- a/src/Server/CMakeLists.txt
+++ b/src/Server/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.8)
-project(server)
+project(Server)
 
 set(CMAKE_CXX_STANDARD 98)
 
+set(CMAKE_CXX_FLAGS -pthread)
+
 set(SOURCE_FILES main.cpp Server.cpp Server.h Command.h CommandsManager.cpp CommandsManager.h StartCommand.cpp StartCommand.h ListGamesCommand.cpp ListGamesCommand.h GameStruct.h JoinCommand.cpp JoinCommand.h PlayCommand.cpp PlayCommand.h CloseCommand.cpp CloseCommand.h)
-add_executable(server ${SOURCE_FILES})
+add_executable(Server ${SOURCE_FILES})
