--- a/src/Server/CMakeLists.txt
+++ b/src/Server/CMakeLists.txt
@@ -5,5 +5,5 @@ set(CMAKE_CXX_STANDARD 98)
 
 set(CMAKE_CXX_FLAGS -pthread)
 
-set(SOURCE_FILES main.cpp Server.cpp Server.h Command.h CommandsManager.cpp CommandsManager.h StartCommand.cpp StartCommand.h ListGamesCommand.cpp ListGamesCommand.h GameStruct.h JoinCommand.cpp JoinCommand.h PlayCommand.cpp PlayCommand.h CloseCommand.cpp CloseCommand.h)
+set(SOURCE_FILES main.cpp Server.cpp Server.h GameStruct.h CommandManager.cpp CommandManager.h Command.h StartCommand.cpp StartCommand.h ListGamesCommand.cpp ListGamesCommand.h JoinCommand.cpp JoinCommand.h CloseCommand.cpp CloseCommand.h)
 add_executable(Server ${SOURCE_FILES})
