TreadPool and Task classes

--- a/src/Server/CMakeLists.txt
+++ b/src/Server/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Server)
 
 set(CMAKE_CXX_STANDARD 98)
 
-set(CMAKE_CXX_FLAGS -pthread)
+SET(CMAKE_CXX_FLAGS "-pthread")
 
-set(SOURCE_FILES main.cpp Server.cpp Server.h GameStruct.h CommandManager.cpp CommandManager.h Command.h StartCommand.cpp StartCommand.h ListGamesCommand.cpp ListGamesCommand.h JoinCommand.cpp JoinCommand.h HandelClient.cpp HandelClient.h PlayCommand.h PlayCommand.cpp GamesListManager.cpp GamesListManager.h ThreadList.cpp ThreadList.h)
+set(SOURCE_FILES main.cpp Server.cpp Server.h GameStruct.h CommandManager.cpp CommandManager.h Command.h StartCommand.cpp StartCommand.h ListGamesCommand.cpp ListGamesCommand.h JoinCommand.cpp JoinCommand.h HandelClient.cpp HandelClient.h PlayCommand.h PlayCommand.cpp GamesListManager.cpp GamesListManager.h ThreadList.cpp ThreadList.h Task.h ThreadPool.cpp ThreadPool.h)
 add_executable(Server ${SOURCE_FILES})
